--- a/gfdfv.html
+++ b/gfdfv.html
@@ -137,11 +137,11 @@
         <div class="row">
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
-              <a href="/comingsoon" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/gfdinnerrolls.jpg" class="w-100" alt="Dinner Rolls">
+              <a href="/gfdfvdinnerrolls" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/gfdinnerrolls.jpg" class="w-100" alt="GF/DF/V Dinner Rolls">
               </a>
               <figcaption class="mt-2">
-                <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
+                <a href="/gfdfvdinnerrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
               </figcaption>
             </figure>
           </div>
