--- a/gfdfvdinnerrolls.html
+++ b/gfdfvdinnerrolls.html
@@ -81,18 +81,18 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Dinner Rolls</h5>
+          <h5 class="py-3 mb-0 h2">GF/DF/V Dinner Rolls</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Sally's Baking Addiction</small>
+          <small class="ps-1">Author: Sarah Bakes Gluten Free</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>January 20th, 2023</small>
+          <small>July 1st, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
@@ -106,15 +106,15 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>3 hours 25 minutes</span>
+                <span>2 hours 30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>22 minutes</span>
+                <span>22-25 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>3 hours 45 minutes</span>
+                <span>2 hours 55 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
