--- a/gfdfvdinnerrolls.html
+++ b/gfdfvdinnerrolls.html
@@ -118,7 +118,7 @@
               </li>
               <li>
                 <small>Serving</small>
-                <span>6 large rolls, 14 small rolls
+                <span>10 medium rolls
                 </span>
               </li>
             </ul>
@@ -129,35 +129,35 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">3 cups (390g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">2 cups warm water</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1  cup (240ml) whole milk, warmed to about 110°F (43°C)</label>
+                  <label class="form-check-label" for="unsalted">3 tablespoons coconut sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 packet instant yeast</label>
+                  <label class="form-check-label" for="unsalted">2 1/4 teaspoons (1 packet) active dry yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tablespoons granulated sugar, divided</label>
+                  <label class="form-check-label" for="unsalted">2 tablespoons EVOO</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 large egg</label>
+                  <label class="form-check-label" for="unsalted">2 3/4 cup <a href="/gfflourblend.html">gluten free flour blend</a></label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 cup (60g) unsalted butter, softened to room temperature and cut into 4 pieces</label>
+                  <label class="form-check-label" for="unsalted">1/3 cup tapioca starch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon psyllium husk powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tablespoons melted unsalted butter (optional topping)</label>
+                  <label class="form-check-label" for="unsalted">1 1/2 teaspoons salt</label>
                 </div>
               </div>
             </div>
@@ -168,43 +168,43 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  <b>Prepare the dough: </b>Whisk the warm milk, yeast, and 1 tablespoon of sugar together in the bowl of your stand mixer. Cover and allow to sit for 5 minutes. *If you do not own a stand mixer, you can do this in a large mixing bowl and in the next step, mix the dough together with a large wooden spoon/rubber spatula. It will take a bit of arm muscle. A hand mixer works, but the sticky dough repeatedly gets stuck in the beaters. Mixing by hand with a wooden spoon or rubber spatula is a better choice.*
+                  Prepare baking sheet by lining with parchment paper.
                 </li>
                 <li>
                   <span>2</span>
-                  Add the remaining sugar, egg, butter, salt, and 1 cup flour. With a dough hook or paddle attachment, mix/beat on low speed for 30 seconds, scrape down the sides of the bowl with a rubber spatula, then add the remaining flour. Beat on medium speed until the dough comes together and pulls away from the sides of the bowl, about 2 minutes. If the dough seems too wet to a point where kneading (next step) would be impossible, beat in more flour 1 tablespoon at a time until you have a workable dough, similar to the photos above. Dough should be soft and a little sticky, but still manageable to knead with lightly floured hands.
+                  In medium bowl, whisk together warm water, sugar and yeast. Allow to sit for 5 minutes to proof and become foamy.
                 </li>
                 <li>
                   <span>3</span>
-                  <b>Knead the dough: </b>Keep the dough in the mixer and beat for an additional 3 full minutes or knead by hand on a lightly floured surface for 3 full minutes.
+                  While yeast is activating, sift together flour blend, cornstarch, psyllium husk powder and salt in large bowl of standing mixer with paddle attachment.
                 </li>
                 <li>
                   <span>4</span>
-                  <b>1st Rise: </b>Lightly grease a large bowl with oil or nonstick spray. Place the dough in the bowl, turning it to coat all sides in the oil. Cover the bowl with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the dough to rise in a relatively warm environment for 1-2 hours or until double in size.
+                  When yeast is ready, add 2 tablespoons oil to yeast mixture. Stir and add to flour mixture. Mix on low. When flour is completely incorporated, continue to mix on medium speed for 3 minutes.
                 </li>
                 <li>
                   <span>5</span>
-                  Grease a glass 9x13-inch baking pan (rolls tend to brown a little too quickly in a metal pan). You can also bake the rolls in a cast iron skillet or on a lined baking sheet.*
+                  Using 1/4 cup measuring cup, scoop dough onto prepared baking sheet, scraping with rubber spatula. Using wet fingers, gently form dough into round, smooth roll shape.
                 </li>
                 <li>
                   <span>6</span>
-                  <b>Shape the rolls: </b>bWhen the dough is ready, punch it down to release the air. Divide the dough into 14-16 equal pieces. (Just eyeball it- doesn't need to be perfect!) Shape each piece into a smooth ball. Arrange in prepared baking pan.
+                  Cover rolls with light dish towel and let rise for about an hour in warm place.
                 </li>
                 <li>
                   <span>7</span>
-                  <b>2nd Rise: </b>Cover shaped rolls with aluminum foil, plastic wrap, or a clean kitchen towel. Allow to rise until puffy, about 1 hour.
+                  When dough is almost ready, preheat oven to 425 degrees. Place water bath on lower rack in oven (I filled an 8x8-inch baking dish 1/3 of the way with water).
                 </li>
                 <li>
                   <span>8</span>
-                  Adjust oven rack to a lower position and preheat oven to 350°F (177°C). (It's best to bake the rolls towards the bottom of the oven so the tops don't burn.)
+                  Place rolls in oven and bake 20-22 minutes or until golden brown. Remove rolls from oven and place on cooling rack. Brush tops with remaining tablespoon oil.
                 </li>
                 <li>
                   <span>9</span>
-                  <b>Bake the rolls: </b>Bake for 20-25 minutes or until golden brown on top, rotating the pan halfway through. If you notice the tops browning too quickly, loosely tent the pan with aluminum foil. Remove from the oven, brush with optional honey butter topping, and allow rolls to cool for a few minutes before serving.
+                  Serve warm. To reheat, wrap rolls in foil and warm in 325 degree oven for 10 minutes.
                 </li>
                 <li>
                   <span>10</span>
-                  Cover leftover rolls tightly and store at room temperature for 2-3 days or in the refrigerator for up to 1 week.
+                  Store rolls in airtight container or ziploc bags. To freeze rolls, place in ziploc bag and freeze for up to a month.
                 </li>
               </ul>
             </div>
