--- a/gfdfvdinnerrolls.html
+++ b/gfdfvdinnerrolls.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 3/4 cup <a href="/gfflourblend.html">gluten free flour blend</a></label>
+                  <label class="form-check-label" for="unsalted">2 3/4 cups <a href="/gfflourblend">gluten free flour blend</a></label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
