--- a/savory.html
+++ b/savory.html
@@ -177,6 +177,16 @@
           </div>
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
+              <a href="/rosemarychickensandwich" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/rosemarychickensandwich.jpg" class="w-100" alt="Rosemary Chicken Sandwich">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/rosemarychickensandwich" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Chicken Sandwich</a>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
               <a href="/rosemarygarlicdressing" class="tstbite-animation rounded-6">
                 <img src="assets/images/food/rosemarygarlicdressing.jpg" class="w-100" alt="Rosemary Garlic Dressing">
               </a>
