--- a/gfdfvdinnerrolls.html
+++ b/gfdfvdinnerrolls.html
@@ -176,7 +176,7 @@
                 </li>
                 <li>
                   <span>3</span>
-                  While yeast is activating, sift together flour blend, cornstarch, psyllium husk powder and salt in large bowl of standing mixer with paddle attachment.
+                  While yeast is activating, sift together gluten free flour blend, tapioca starch, psyllium husk powder, and salt in large bowl of standing mixer with paddle attachment.
                 </li>
                 <li>
                   <span>4</span>
@@ -192,15 +192,15 @@
                 </li>
                 <li>
                   <span>7</span>
-                  When dough is almost ready, preheat oven to 425 degrees. Place water bath on lower rack in oven (I filled an 8x8-inch baking dish 1/3 of the way with water).
+                  When dough is almost ready, preheat oven to 425°F. Place water bath on lower rack in oven (I filled an 8x8-inch baking dish 1/3 of the way with water).
                 </li>
                 <li>
                   <span>8</span>
-                  Place rolls in oven and bake 20-22 minutes or until golden brown. Remove rolls from oven and place on cooling rack. Brush tops with remaining tablespoon oil.
+                  Place rolls in oven and bake 22-25 minutes or until golden brown. Remove rolls from oven and place on cooling rack. Brush tops with remaining tablespoon oil.
                 </li>
                 <li>
                   <span>9</span>
-                  Serve warm. To reheat, wrap rolls in foil and warm in 325 degree oven for 10 minutes.
+                  Serve warm. To reheat, wrap rolls in foil and warm in 325°F oven for 10 minutes.
                 </li>
                 <li>
                   <span>10</span>
