--- a/rosemarychickensandwich.html
+++ b/rosemarychickensandwich.html
@@ -146,6 +146,10 @@
                   <span>1</span>
                   Grill chicken, bake rolls, and make dressing. Assemble sandwiches.
                 </li>
+                <li>
+                  <span>2</span>
+                  <i>Optional: </i> Add sliced avocado and red onion.
+                </li>
               </ul>
             </div>
           </div>
