--- a/harissameatballs.html
+++ b/harissameatballs.html
@@ -129,7 +129,7 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 lb ground beef</label>
+                  <label class="form-check-label" for="crackers">1 lb ground beef (substitute ground turkey)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
