--- a/mealideas.html
+++ b/mealideas.html
@@ -69,6 +69,40 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0"><a style="color: #FF6330">Meal Ideas</a></h5>
+      <div class="col-md-6">
+        <div class="mt-5">
+          <ul class="instruction-list list-unstyled">
+            <li>
+              <span>1</span>
+              Turkey or Beef Meatballs with Spaghetti
+            </li>
+            <li>
+              <span>2</span>
+              Kimchi Fried Rice
+            </li>
+            <li>
+              <span>3</span>
+              Firecracker Chicken Wings
+            </li>
+            <li>
+              <span>4</span>
+              Firecracker Salmon
+            </li>
+            <li>
+              <span>5</span>
+              Grilled Chicken, Sweet Potatoes, and Herb Dressing
+            </li>
+            <li>
+              <span>6</span>
+              Grilled Chicken Sandwiches on Dinner Rolls with Rosemary Garlic Dressing
+            </li>
+            <li>
+              <span>7</span>
+              Ground Beef Hard Shell Tacos with Herb Dressing
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
   </div>
 </section>
