--- a/mealideas.html
+++ b/mealideas.html
@@ -94,11 +94,47 @@
             </li>
             <li>
               <span>6</span>
-              Grilled Chicken Sandwiches on Dinner Rolls with Rosemary Garlic Dressing
+              Grilled Chicken Sandwiches on Dinner Rolls with Green Lettuce, Arugula, and Rosemary Garlic Dressing
             </li>
             <li>
               <span>7</span>
               Ground Beef Hard Shell Tacos with Herb Dressing
+            </li>
+            <li>
+              <span>8</span>
+             Teriyaki Rice Noodle Chicken Stir Fry
+            </li>
+            <li>
+              <span>9</span>
+             White Fish with Miso Dressing
+            </li>
+            <li>
+              <span>10</span>
+             White Fish with Miso Dressing
+            </li>
+            <li>
+              <span>11</span>
+             Roasted Chicken Thighs with Oyster Sauce
+            </li>
+            <li>
+              <span>12</span>
+             Tahini Salmon Bowls
+            </li>
+            <li>
+              <span>13</span>
+             Honey Garlic Chicken
+            </li>
+            <li>
+              <span>14</span>
+             Organic Chicken Nuggets/Tenders
+            </li>
+            <li>
+              <span>15</span>
+             Cava
+            </li>
+            <li>
+              <span>16</span>
+             Shake Shack
             </li>
           </ul>
         </div>
