--- a/mealideas.html
+++ b/mealideas.html
@@ -126,14 +126,18 @@
             </li>
             <li>
               <span>14</span>
-             Organic Chicken Nuggets/Tenders
+             Chicken Soft Shell Tacos
             </li>
             <li>
               <span>15</span>
-             Cava
+             Organic Chicken Nuggets/Tenders
             </li>
             <li>
               <span>16</span>
+             Cava
+            </li>
+            <li>
+              <span>17</span>
              Shake Shack
             </li>
           </ul>
