--- a/mealideas.html
+++ b/mealideas.html
@@ -130,14 +130,22 @@
             </li>
             <li>
               <span>15</span>
-             Organic Chicken Nuggets/Tenders
+             Seared Garlic Scallops
             </li>
             <li>
               <span>16</span>
-             Cava
+             Stuffed Peppers
             </li>
             <li>
               <span>17</span>
+             Organic Chicken Nuggets/Tenders
+            </li>
+            <li>
+              <span>18</span>
+             Cava
+            </li>
+            <li>
+              <span>19</span>
              Shake Shack
             </li>
           </ul>
