--- a/mealideas.html
+++ b/mealideas.html
@@ -69,42 +69,38 @@
             </li>
             <li>
               <span>10</span>
-             White Fish with Miso Dressing
-            </li>
-            <li>
-              <span>11</span>
              Roasted Chicken Thighs with Oyster Sauce
             </li>
             <li>
-              <span>12</span>
+              <span>11</span>
              Tahini Salmon Bowls
             </li>
             <li>
-              <span>13</span>
+              <span>12</span>
              Honey Garlic Chicken
             </li>
             <li>
-              <span>14</span>
+              <span>13</span>
              Chicken Soft Shell Tacos
             </li>
             <li>
-              <span>15</span>
+              <span>14</span>
              Seared Garlic Scallops
             </li>
             <li>
-              <span>16</span>
+              <span>15</span>
              Stuffed Peppers
             </li>
             <li>
-              <span>17</span>
+              <span>16/span>
              Organic Chicken Nuggets/Tenders
             </li>
             <li>
-              <span>18</span>
+              <span>17</span>
              Cava
             </li>
             <li>
-              <span>19</span>
+              <span>18</span>
              Shake Shack
             </li>
           </ul>
