--- a/mealideas.html
+++ b/mealideas.html
@@ -35,6 +35,7 @@
               <span>1</span>
               Turkey or Beef Meatballs with Spaghetti
             </li>
+            <p>Groceries Needed: Ground Turkey or Ground Beef</p>
             <li>
               <span>2</span>
               Kimchi Fried Rice
