--- a/mealideas.html
+++ b/mealideas.html
@@ -89,7 +89,7 @@
              Seared Garlic Scallops
             </li>
             <li>
-              <span>15/span>
+              <span>15</span>
              Organic Chicken Nuggets/Tenders
             </li>
           </ul>
