--- a/savory.html
+++ b/savory.html
@@ -196,6 +196,18 @@
             </figure>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
+              <a href="/stirfry" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/teriyakistirfry.jpg" class="w-100" alt="Teriyaki Stir Fry">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/stirfry" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Teriyaki Stir Fry</a>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
       </div>
       </div>
     </section>
