--- a/stirfry.html
+++ b/stirfry.html
@@ -81,7 +81,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Stir Fry</h5>
+          <h5 class="py-3 mb-0 h2">Teriyaki Stir Fry</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
@@ -98,7 +98,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/kimchifriedrice.jpg" class="w-100" >
+          <img src="assets/images/food/teriyakistirfry.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -129,55 +129,55 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 cup short-grain white rice</label>
+                  <label class="form-check-label" for="ricenoodles">1 pack rice noodles</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/8-1/4 cup EVOO</label>
+                  <label class="form-check-label" for="chicken">2-3 chicken breasts</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2-3 tablespoons chicken bone broth</label>
+                  <label class="form-check-label" for="evoo">1/8 cup EVOO</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 tablespoon finely minced garlic (substitute garlic powder)</label>
+                  <label class="form-check-label" for="bonebroth">2-3 tablespoons chicken bone broth</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="coconutaminos">1/4 cup coconut aminos</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                     <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="crackers">1/2 tablespoon fresh ginger</label>
+                    <label class="form-check-label" for="honey">1/8 cup honey (substitute maple syrup)</label>
                   </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 teaspoon onion powder</label>
+                  <label class="form-check-label" for="sesameoil">1 teaspoon sesame oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 teaspoon cracked black pepper</label>
+                  <label class="form-check-label" for="starch">1 teaspoon potato starch (substitute arrowroot starch)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">Scallions to taste</label>
+                  <label class="form-check-label" for="garlicpowder">1/4 teaspoon garlic powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">Freshly grated carrots to taste</label>
+                  <label class="form-check-label" for="greenonion">2 stalks of green onion, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                     <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="unsalted">1/8 teaspoon sesame oil</label>
+                    <label class="form-check-label" for="carrots">2-3 carrots, shredded</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                     <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="unsalted">5 tablespoons kimchi</label>
+                    <label class="form-check-label" for="redpepper">1 red bell pepper, deseeded and sliced</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                     <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="unsalted">1 chicken breast (optional)</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                    <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="unsalted">Sesame seeds to garnish</label>
+                    <label class="form-check-label" for="sesameseeds">Sesame seeds to garnish</label>
                 </div>
               </div>
             </div>
@@ -188,39 +188,47 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Grill chicken breast in a pan until finished. Remove chicken from pan and chop into fine pieces, then set aside.
+                  Cook rice noodles accoridng to the directions on the packet. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  Add EVOO shortly after finishing cooking the chicken and allow the pan to heat until mildly hot.
+                  Grill 2-3 chicken breasts in a pan. Cut into small pieces, then set aside both the chicken and the pan for later use.
                 </li>
                 <li>
                   <span>3</span>
-                  Add white rice to the pan and distribute evenly through the pan. Ensure there is enough oil in the pan to generously coat all of the rice.
+                  Chop scallions and place in a small bowl. In a separate bowl, deseed and slice a red bell pepper into small pieces, then shred carrots.
                 </li>
                 <li>
                   <span>4</span>
-                  Add chicken bone broth slowly and continue mixing rice until broth integrates with the rice.
+                  In a small bowl, mix together coconut aminos, honey, sesame oil, potato starch, and garlic powder. Set aside.
                 </li>
                 <li>
-                <span>5</span>
-                Take the pan off of the heat and add onion poweder, cracked black pepper, and garlic powder (if using).
+                  <span>5</span>
+                  In the same pan that was used to grill the chicken, add EVOO and heat over medium heat.
                 </li>
                 <li>
-                <span>6</span>
-                Place the pan back on heat, push rice to one side of the pan, and add carrots, scallions, fresh garlic, and fresh ginger to the empty side. Let the vegetables, garlic, and ginger cook for about 15-20 seconds before incorporating with the rice. 
+                  <span>6</span>
+                  Add the scallions and cook until fragrant, no more than about 30 seconds.
                 </li>
                 <li>
-                    <span>7</span>
-                    Take the pan back off of the heat and add chicken and sesame oil, then mix.
-                    </li>
-                    <li>
-                        <span>8</span>
-                        Lastly, add the kimchi and mix well. Garnish with sesame seeds.
-                        </li>
-                    <li>
-                        <i>*Note: Fried rice is definitely a versatile dish - it's all about finding the combination and/or amount of ingredients that suit your palate best! Feel free to play around with these ingredients and the amounts of each.</i>
-                        </li>
+                  <span>7</span>
+                  Mix in the vegetables and bone broth. Cook for about 5 minutes.
+                </li>
+                <li>
+                  <span>8</span>
+                  Stir in the teriyaki sauce. Cook, stirring occasionally, until the vegetables are tender, for about 3 minutes. 
+                </li>
+                <li>
+                  <span>9</span>
+                  Add rice noodles to the pan and stir.
+                </li>
+                <li>
+                  <span>10</span>
+                  Add chicken to the pan and stir. Serve immediately.
+                </li>
+                <li>
+                  <i>*Note: Stir Fry is a versatile dish, so feel free to add any additional vegetables you'd like (broccoli, cauliflower, etc.)</i>
+                </li>
               </ul>
             </div>
           </div>
