--- a/harissameatballs.html
+++ b/harissameatballs.html
@@ -192,7 +192,7 @@
                 </li>
                 <li>
                   <span>5</span>
-                  Bake uncovered 20 to 22 minutes, or until internal temperature reaches 165°F, flipping meatballs halfway through. Serve with harissa and parsley.
+                  Bake uncovered 20 to 22 minutes, or until internal temperature reaches 165°F, flipping meatballs halfway through. Serve with parsley, harissa, or buffalo sauce.
                 </li>
               </ul>
             </div>
