--- a/harissameatballs.html
+++ b/harissameatballs.html
@@ -81,7 +81,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Harissa Meatballs</h5>
+          <h5 class="py-3 mb-0 h2">Meatballs</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
