--- a/savory.html
+++ b/savory.html
@@ -155,11 +155,11 @@
           </div>
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
-              <a href="/harissameatballs" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/harissameatballs.png" class="w-100" alt="Harissa Meatballs">
+              <a href="/meatballs" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/meatballs.jpg" class="w-100" alt="Meatballs">
               </a>
               <figcaption class="mt-2">
-                <a href="/harissameatballs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Harissa Meatballs</a>
+                <a href="/meatballs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meatballs</a>
               </figcaption>
             </figure>
           </div>
