--- a/meatballs.html
+++ b/meatballs.html
@@ -129,43 +129,43 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 lb ground beef (substitute ground turkey)</label>
+                  <label class="form-check-label" for="groundbeef">1 lb ground beef (substitute ground turkey)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 cup breadcrumbs</label>
+                  <label class="form-check-label" for="breadcrumbs">1/2 cup breadcrumbs</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon minced garlic</label>
+                  <label class="form-check-label" for="garlic">1 teaspoon minced garlic</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 teaspoon fresh basil, chopped</label>
+                  <label class="form-check-label" for="basil">1 teaspoon fresh basil, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                  <label class="form-check-label" for="salt">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon cracked black pepper</label>
+                  <label class="form-check-label" for="blackpepper">1/2 teaspoon cracked black pepper</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon onion powder</label>
+                  <label class="form-check-label" for="onionpowder">1/2 teaspoon onion powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tablespoons almond milk</label>
+                  <label class="form-check-label" for="milk">2 tablespoons almond milk (substitute alternative dairy-free milk)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted"><i>Optional: </i>Harissa or buffalo sauce to taste</label>
+                  <label class="form-check-label" for="condiment"><i>Optional: </i>Harissa or buffalo sauce to taste</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">Fresh parsley to taste</label>
+                  <label class="form-check-label" for="parsley">Fresh parsley to taste</label>
                 </div>
               </div>
             </div>
