--- a/meatballs.html
+++ b/meatballs.html
@@ -161,7 +161,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="condiment"><i>Optional: </i>Harissa or buffalo sauce to taste</label>
+                  <label class="form-check-label" for="condiment"><i>Optional: </i>Harissa or buffalo sauce for dipping</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
