--- a/stirfry.html
+++ b/stirfry.html
@@ -188,7 +188,7 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Cook rice noodles accoridng to the directions on the packet. Set aside.
+                  Cook rice noodles according to the directions on the packet. Set aside.
                 </li>
                 <li>
                   <span>2</span>
