--- a/stirfry.html
+++ b/stirfry.html
@@ -129,7 +129,7 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="ricenoodles">1 pack rice noodles</label>
+                  <label class="form-check-label" for="ricenoodles">1-2 pack(s) rice noodles</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
