--- a/rosemarychickensandwich.html
+++ b/rosemarychickensandwich.html
@@ -121,19 +121,19 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">1 batch <a href="/gfdfvdinnerrolls"> GF/DF/V dinner rolls</a></label>
+                  <label class="form-check-label" for="rolls">1 batch <a href="/gfdfvdinnerrolls" style="color: #FF6330"> GF/DF/V dinner rolls</a></label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="melted" name="melted" class="form-check-input">
-                  <label class="form-check-label" for="melted">Grilled chicken</label>
+                  <label class="form-check-label" for="chicken">Grilled chicken</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia"><a href="/rosemarygarlicdressing">Rosemary garlic dressing</a></label>
+                  <label class="form-check-label" for="dressing"><a href="/rosemarygarlicdressing" style="color: #FF6330">Rosemary garlic dressing</a></label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
-                  <label class="form-check-label" for="thickened">Romaine lettuce to taste</label>
+                  <label class="form-check-label" for="lettuce">Romaine lettuce to taste</label>
                 </div>
               </div>
             </div>
