--- a/mealideas.html
+++ b/mealideas.html
@@ -35,7 +35,7 @@
               <span>1</span>
               Turkey or Beef Meatballs with Spaghetti
             </li>
-            <p>Groceries Needed: Ground turkey or ground beef, breadcrumbs, garlic, basil, parsley, dairy-free milk, harissa and/or buffalo sauce for dipping</p>
+            <p><b>Groceries:</b> Ground turkey or ground beef, breadcrumbs, garlic, basil, parsley, dairy-free milk, harissa and/or buffalo sauce for dipping</p>
             <li>
               <span>2</span>
               Kimchi Fried Rice
