--- a/mealideas.html
+++ b/mealideas.html
@@ -40,10 +40,12 @@
               <span>2</span>
               Kimchi Fried Rice
             </li>
+            <p><b>Groceries:</b> White rice, chicken bone broth, garlic, ginger, scallions, carrots, sesame oil, kimchi, chicken</p>
             <li>
               <span>3</span>
               Firecracker Chicken Wings
             </li>
+            <p><b>Groceries:</b> Coconut sugar, buffalo sauce, sriracha, garlic, raw honey, parsley, green  onions, king or sockeye salmon</p>
             <li>
               <span>4</span>
               Firecracker Salmon
