--- a/stirfry.html
+++ b/stirfry.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                     <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="honey">1/8 cup honey (substitute maple syrup)</label>
+                    <label class="form-check-label" for="honey">1/8 cup raw honey (substitute maple syrup)</label>
                   </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
