--- a/baklava.html
+++ b/baklava.html
@@ -161,7 +161,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 cup honey</label>
+                  <label class="form-check-label" for="crackers">1 cup raw honey</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
