--- a/volcanosalmon.html
+++ b/volcanosalmon.html
@@ -169,7 +169,7 @@
                 <strong>Salmon</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 king salmon filets</label>
+                  <label class="form-check-label" for="crackers">2 king or sockeye salmon filets</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
