--- a/mealideas.html
+++ b/mealideas.html
@@ -45,11 +45,12 @@
               <span>3</span>
               Firecracker Chicken Wings
             </li>
-            <p><b>Groceries:</b> Coconut sugar, buffalo sauce, sriracha, garlic, raw honey, parsley, green  onions, king or sockeye salmon</p>
+            <p><b>Groceries:</b> Coconut sugar, buffalo sauce, sriracha, garlic, raw honey, parsley, green  onions, chicken wings</p>
             <li>
               <span>4</span>
               Firecracker Salmon
             </li>
+            <p><b>Groceries:</b> Coconut sugar, buffalo sauce, sriracha, garlic, raw honey, parsley, green  onions, king or sockeye salmon</p>
             <li>
               <span>5</span>
               Grilled Chicken, Sweet Potatoes, and Herb Dressing
