--- a/meatballs.html
+++ b/meatballs.html
@@ -161,11 +161,15 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="condiment"><i>Optional: </i>Harissa or buffalo sauce for dipping</label>
+                  <label class="form-check-label" for="parsley">Fresh parsley to taste</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="parsley">Fresh parsley to taste</label>
+                  <label class="form-check-label" for="condiment"><i>Optional: </i>Spaghetti</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="condiment"><i>Optional: </i>Harissa or buffalo sauce for dipping</label>
                 </div>
               </div>
             </div>
